--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-apptimize",
-  "version": "0.1.0",
+  "version": "0.1.11",
   "description": "Apptimize react native sdk",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -67,7 +67,6 @@
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "18.2.0",
-    "react-native": "0.72.4",
     "react-native-builder-bob": "^0.20.0",
     "release-it": "^15.0.0",
     "typescript": "^5.0.2"
@@ -77,7 +76,8 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-device-info": "*"
   },
   "engines": {
     "node": ">= 16.0.0"
@@ -152,6 +152,7 @@
     ]
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "react-native-advertising-id": "^1.0.11"
   }
 }
